welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:44: error: expected class or object definition
faireMotif()
^PatternPicture:45: error: Unmatched closing brace '}' ignored here
}
^PatternPicture:46: error: eof expected but '}' found.
}
^